gitops/clusters/oci-a1/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
    argocd.argoproj.io/sync-wave: '-20'
  labels:
    istio-injection: disabled
  name: monitoring
