gitops/clusters/oci-a1/monitoring/redis-metrics-replica.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-metrics-replica
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis-metrics
      redis-role: replica
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis-metrics
        redis-role: replica
    spec:
      automountServiceAccountToken: false
      containers:
      - args:
        - --config-command=-
        - --log-level=fatal
        image: docker.io/oliver006/redis_exporter:v1.91.1@sha256:c67a432dba6b4ae30f471e3c77cf14a289133bbeeb89abb0bb03e6092efb2836
        livenessProbe:
          httpGet:
            path: /health
            port: metrics
        name: exporter
        ports:
        - containerPort: 9121
          name: metrics
        readinessProbe:
          httpGet:
            path: /health
            port: metrics
        resources:
          limits:
            memory: 64Mi
          requests:
            cpu: 10m
            memory: 32Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tls
          name: tls
          readOnly: true
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - name: tls
        secret:
          defaultMode: 288
          items:
          - key: ca.crt
            path: ca.crt
          - key: tls.crt
            path: tls.crt
          - key: tls.key
            path: tls.key
          secretName: redis-metrics
