gitops/clusters/oci-a1/monitoring/grafana-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '10'
  name: grafana-public
  namespace: istio-system
spec:
  selector:
    app: istio-ingress
  servers:
  - hosts:
    - ./grafana.rvkang.app
    port:
      name: http-grafana
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - ./grafana.rvkang.app
    port:
      name: https-grafana
      number: 443
      protocol: HTTPS
    tls:
      credentialName: grafana-public-tls
      minProtocolVersion: TLSV1_2
      mode: SIMPLE
