gitops/clusters/oci-a1/monitoring/grafana-destination.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '10'
  name: grafana-public
  namespace: istio-system
spec:
  exportTo:
  - .
  host: monitoring-grafana.monitoring.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
  workloadSelector:
    matchLabels:
      app: istio-ingress
